2013-11-18   John Tobey <jtobey@john-edwin-tobey.org>
	     Per Bothner  <per@bothner.com>

	* mac-test.scm: Test from Savannah bug #40616
	"Unhygienic syntax-rules".

2013-11-10  John Tobey <jtobey@john-edwin-tobey.org>
	    Per Bothner  <per@bothner.com>

	* sva40494.scm: New test for Savannah bug #40494
	"internal error on kawa -C bug.scm, 1.14 and head".
	* Makefile.am: Update accordingly.

2013-10-30  Per Bothner  <per@bothner.com>

	* xml-test.scm: Update prefix in namespace-declaration is symbol,
	not string.
	Add test for unquoted enclosed expression for attribute value.

2013-10-23  Per Bothner  <per@bothner.com>

	* xml-test.scm: Add test for indentation control marker '&|'.

2013-10-19  David Van Horn
	    Per Bothner  <per@bothner.com>

	* srfi-101-test.scm: Port of SRFI-101 test suite.
	* Makefile.am: Update accordingly.

2013-10-07  Ito Kazumitsu
	    Per Bothner  <per@bothner.com>

	* reflect2.scm: New testcase.
	* Makefile.am: Update accordingly.

2013-10-07  Per Bothner  <per@bothner.com>

	* module2.scm, obj-test.scm: Add tests for export with rename.

2013-09-29  Per Bothner  <per@bothner.com>

	* r7rs-tests.scm: Merge some updates from upstream.

2013-09-27  Matthieu Vachon  <matthieu.o.vachon@gmail.com>
	    Per Bothner  <per@bothner.com>

	* unreach.scm: Test for Savannah bug #40123
	"Nested with-compile-options problem".

2013-09-26  Per Bothner  <per@bothner.com>

	* r7rs-tests.scm: Enabled list-set! and list-copy tests.
	Added more tests for list-copy - already accepted upstream.

2013-09-24  Per Bothner  <per@bothner.com>

	* r7rs-tests.scm: More complex test for case including =>.
	Already accepted upstream.

	* srfi-38-test.scm: Update - datum labels now start at 0.

2013-09-23  Per Bothner  <per@bothner.com>

	* Makefile.am (EXTRA_DIST ): Belatedly add r7rs-tests.scm.

2013-09-21  Matthieu Vachon  <matthieu.o.vachon@gmail.com>

	* sva40077.scm: New test based on Savannah bug#40077 "Boolean